framework/contracts/account/manager/tests/snapshots/adapters__install_one_adapter_with_fee-contract1.snap
---
source: contracts/account/manager/tests/adapters.rs
expression: chain.app.borrow().dump_wasm_raw(&contract_addr)
---
- - - 0
    - 3
    - 99
    - 102
    - 103
    - 0
    - 6
    - 116
    - 101
    - 115
    - 116
    - 101
    - 114
    - 0
    - 14
    - 116
    - 101
    - 115
    - 116
    - 45
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 45
    - 105
    - 100
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
  - - 123
    - 34
    - 109
    - 111
    - 110
    - 101
    - 116
    - 105
    - 122
    - 97
    - 116
    - 105
    - 111
    - 110
    - 34
    - 58
    - 123
    - 34
    - 105
    - 110
    - 115
    - 116
    - 97
    - 108
    - 108
    - 95
    - 102
    - 101
    - 101
    - 34
    - 58
    - 123
    - 34
    - 102
    - 101
    - 101
    - 34
    - 58
    - 123
    - 34
    - 100
    - 101
    - 110
    - 111
    - 109
    - 34
    - 58
    - 34
    - 117
    - 106
    - 117
    - 110
    - 111
    - 120
    - 34
    - 44
    - 34
    - 97
    - 109
    - 111
    - 117
    - 110
    - 116
    - 34
    - 58
    - 34
    - 52
    - 53
    - 34
    - 125
    - 125
    - 125
    - 44
    - 34
    - 109
    - 101
    - 116
    - 97
    - 100
    - 97
    - 116
    - 97
    - 34
    - 58
    - 110
    - 117
    - 108
    - 108
    - 44
    - 34
    - 105
    - 110
    - 115
    - 116
    - 97
    - 110
    - 116
    - 105
    - 97
    - 116
    - 105
    - 111
    - 110
    - 95
    - 102
    - 117
    - 110
    - 100
    - 115
    - 34
    - 58
    - 91
    - 93
    - 125
- - - 0
    - 3
    - 108
    - 105
    - 98
    - 0
    - 6
    - 116
    - 101
    - 115
    - 116
    - 101
    - 114
    - 0
    - 14
    - 116
    - 101
    - 115
    - 116
    - 45
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 45
    - 105
    - 100
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
  - - 123
    - 34
    - 97
    - 100
    - 97
    - 112
    - 116
    - 101
    - 114
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 49
    - 48
    - 34
    - 125
- - - 0
    - 3
    - 108
    - 105
    - 98
    - 0
    - 8
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 0
    - 5
    - 112
    - 114
    - 111
    - 120
    - 121
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
  - - 123
    - 34
    - 97
    - 99
    - 99
    - 111
    - 117
    - 110
    - 116
    - 95
    - 98
    - 97
    - 115
    - 101
    - 34
    - 58
    - 54
    - 125
- - - 0
    - 3
    - 108
    - 105
    - 98
    - 0
    - 8
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 0
    - 7
    - 109
    - 97
    - 110
    - 97
    - 103
    - 101
    - 114
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
  - - 123
    - 34
    - 97
    - 99
    - 99
    - 111
    - 117
    - 110
    - 116
    - 95
    - 98
    - 97
    - 115
    - 101
    - 34
    - 58
    - 53
    - 125
- - - 0
    - 3
    - 108
    - 105
    - 98
    - 0
    - 8
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 0
    - 8
    - 97
    - 110
    - 115
    - 45
    - 104
    - 111
    - 115
    - 116
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
  - - 123
    - 34
    - 110
    - 97
    - 116
    - 105
    - 118
    - 101
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 48
    - 34
    - 125
- - - 0
    - 3
    - 108
    - 105
    - 98
    - 0
    - 8
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 0
    - 10
    - 105
    - 98
    - 99
    - 45
    - 99
    - 108
    - 105
    - 101
    - 110
    - 116
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
  - - 123
    - 34
    - 97
    - 100
    - 97
    - 112
    - 116
    - 101
    - 114
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 52
    - 34
    - 125
- - - 0
    - 3
    - 108
    - 105
    - 98
    - 0
    - 8
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 0
    - 14
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 45
    - 102
    - 97
    - 99
    - 116
    - 111
    - 114
    - 121
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
  - - 123
    - 34
    - 110
    - 97
    - 116
    - 105
    - 118
    - 101
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 50
    - 34
    - 125
- - - 0
    - 3
    - 108
    - 105
    - 98
    - 0
    - 8
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 0
    - 15
    - 97
    - 99
    - 99
    - 111
    - 117
    - 110
    - 116
    - 45
    - 102
    - 97
    - 99
    - 116
    - 111
    - 114
    - 121
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
  - - 123
    - 34
    - 110
    - 97
    - 116
    - 105
    - 118
    - 101
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 51
    - 34
    - 125
- - - 0
    - 3
    - 108
    - 105
    - 98
    - 0
    - 8
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 0
    - 15
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 45
    - 99
    - 111
    - 110
    - 116
    - 114
    - 111
    - 108
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
  - - 123
    - 34
    - 110
    - 97
    - 116
    - 105
    - 118
    - 101
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 49
    - 34
    - 125
- - - 0
    - 4
    - 97
    - 99
    - 99
    - 115
    - 0
    - 5
    - 108
    - 111
    - 99
    - 97
    - 108
    - 0
    - 0
    - 0
    - 0
  - - 123
    - 34
    - 109
    - 97
    - 110
    - 97
    - 103
    - 101
    - 114
    - 34
    - 58
    - 34
    - 68
    - 63
    - 195
    - 138
    - 92
    - 117
    - 48
    - 48
    - 49
    - 52
    - 194
    - 172
    - 195
    - 165
    - 91
    - 194
    - 143
    - 35
    - 94
    - 44
    - 194
    - 161
    - 194
    - 134
    - 52
    - 92
    - 114
    - 92
    - 117
    - 48
    - 48
    - 48
    - 69
    - 92
    - 114
    - 194
    - 161
    - 195
    - 169
    - 195
    - 147
    - 194
    - 175
    - 58
    - 53
    - 90
    - 92
    - 117
    - 48
    - 48
    - 48
    - 69
    - 195
    - 145
    - 195
    - 188
    - 70
    - 37
    - 194
    - 190
    - 195
    - 161
    - 92
    - 98
    - 34
    - 44
    - 34
    - 112
    - 114
    - 111
    - 120
    - 121
    - 34
    - 58
    - 34
    - 118
    - 92
    - 117
    - 48
    - 48
    - 48
    - 53
    - 32
    - 87
    - 36
    - 195
    - 155
    - 195
    - 146
    - 121
    - 195
    - 184
    - 194
    - 139
    - 60
    - 92
    - 92
    - 119
    - 195
    - 131
    - 92
    - 117
    - 48
    - 48
    - 48
    - 49
    - 92
    - 117
    - 48
    - 48
    - 49
    - 66
    - 194
    - 181
    - 103
    - 41
    - 91
    - 51
    - 62
    - 41
    - 194
    - 188
    - 195
    - 162
    - 92
    - 117
    - 48
    - 48
    - 49
    - 65
    - 92
    - 117
    - 48
    - 48
    - 48
    - 50
    - 38
    - 194
    - 183
    - 195
    - 185
    - 92
    - 34
    - 109
    - 34
    - 125
- - - 0
    - 4
    - 97
    - 99
    - 99
    - 115
    - 0
    - 5
    - 108
    - 111
    - 99
    - 97
    - 108
    - 0
    - 0
    - 0
    - 1
  - - 123
    - 34
    - 109
    - 97
    - 110
    - 97
    - 103
    - 101
    - 114
    - 34
    - 58
    - 34
    - 195
    - 186
    - 194
    - 128
    - 195
    - 131
    - 194
    - 186
    - 194
    - 131
    - 92
    - 117
    - 48
    - 48
    - 48
    - 70
    - 194
    - 161
    - 102
    - 57
    - 195
    - 138
    - 92
    - 117
    - 48
    - 48
    - 48
    - 69
    - 194
    - 152
    - 47
    - 194
    - 180
    - 75
    - 125
    - 92
    - 117
    - 48
    - 48
    - 49
    - 68
    - 41
    - 194
    - 168
    - 92
    - 117
    - 48
    - 48
    - 49
    - 54
    - 55
    - 195
    - 144
    - 118
    - 78
    - 195
    - 154
    - 194
    - 149
    - 194
    - 161
    - 195
    - 171
    - 195
    - 163
    - 125
    - 124
    - 100
    - 34
    - 44
    - 34
    - 112
    - 114
    - 111
    - 120
    - 121
    - 34
    - 58
    - 34
    - 195
    - 152
    - 194
    - 158
    - 74
    - 92
    - 92
    - 195
    - 140
    - 49
    - 194
    - 172
    - 194
    - 180
    - 66
    - 194
    - 180
    - 194
    - 130
    - 195
    - 155
    - 87
    - 110
    - 92
    - 34
    - 194
    - 143
    - 194
    - 130
    - 92
    - 117
    - 48
    - 48
    - 49
    - 66
    - 92
    - 117
    - 48
    - 48
    - 49
    - 50
    - 96
    - 194
    - 177
    - 194
    - 143
    - 194
    - 191
    - 57
    - 194
    - 189
    - 92
    - 117
    - 48
    - 48
    - 48
    - 53
    - 92
    - 117
    - 48
    - 48
    - 48
    - 50
    - 195
    - 141
    - 194
    - 186
    - 195
    - 177
    - 195
    - 185
    - 194
    - 172
    - 34
    - 125
- - - 0
    - 5
    - 110
    - 109
    - 115
    - 112
    - 99
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
  - - 123
    - 34
    - 116
    - 114
    - 97
    - 99
    - 101
    - 34
    - 58
    - 34
    - 108
    - 111
    - 99
    - 97
    - 108
    - 34
    - 44
    - 34
    - 115
    - 101
    - 113
    - 34
    - 58
    - 48
    - 125
- - - 0
    - 5
    - 110
    - 109
    - 115
    - 112
    - 99
    - 116
    - 101
    - 115
    - 116
    - 101
    - 114
  - - 123
    - 34
    - 116
    - 114
    - 97
    - 99
    - 101
    - 34
    - 58
    - 34
    - 108
    - 111
    - 99
    - 97
    - 108
    - 34
    - 44
    - 34
    - 115
    - 101
    - 113
    - 34
    - 58
    - 49
    - 125
- - - 0
    - 7
    - 110
    - 109
    - 115
    - 112
    - 99
    - 95
    - 97
    - 0
    - 5
    - 108
    - 111
    - 99
    - 97
    - 108
    - 0
    - 4
    - 0
    - 0
    - 0
    - 0
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
  - - 56
- - - 0
    - 7
    - 110
    - 109
    - 115
    - 112
    - 99
    - 95
    - 97
    - 0
    - 5
    - 108
    - 111
    - 99
    - 97
    - 108
    - 0
    - 4
    - 0
    - 0
    - 0
    - 1
    - 116
    - 101
    - 115
    - 116
    - 101
    - 114
  - - 54
- - - 99
    - 102
    - 103
  - - 123
    - 34
    - 97
    - 108
    - 108
    - 111
    - 119
    - 95
    - 100
    - 105
    - 114
    - 101
    - 99
    - 116
    - 95
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 95
    - 114
    - 101
    - 103
    - 105
    - 115
    - 116
    - 114
    - 97
    - 116
    - 105
    - 111
    - 110
    - 95
    - 97
    - 110
    - 100
    - 95
    - 117
    - 112
    - 100
    - 97
    - 116
    - 101
    - 115
    - 34
    - 58
    - 116
    - 114
    - 117
    - 101
    - 44
    - 34
    - 110
    - 97
    - 109
    - 101
    - 115
    - 112
    - 97
    - 99
    - 101
    - 95
    - 114
    - 101
    - 103
    - 105
    - 115
    - 116
    - 114
    - 97
    - 116
    - 105
    - 111
    - 110
    - 95
    - 102
    - 101
    - 101
    - 34
    - 58
    - 123
    - 34
    - 100
    - 101
    - 110
    - 111
    - 109
    - 34
    - 58
    - 34
    - 110
    - 111
    - 110
    - 101
    - 34
    - 44
    - 34
    - 97
    - 109
    - 111
    - 117
    - 110
    - 116
    - 34
    - 58
    - 34
    - 48
    - 34
    - 125
    - 125
- - - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 95
    - 105
    - 110
    - 102
    - 111
  - - 123
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 34
    - 58
    - 34
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 58
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 45
    - 99
    - 111
    - 110
    - 116
    - 114
    - 111
    - 108
    - 34
    - 44
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 34
    - 58
    - 34
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
    - 34
    - 125
- - - 102
    - 97
    - 99
  - - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 51
    - 34
- - - 111
    - 119
    - 110
    - 101
    - 114
    - 115
    - 104
    - 105
    - 112
  - - 123
    - 34
    - 111
    - 119
    - 110
    - 101
    - 114
    - 34
    - 58
    - 34
    - 111
    - 119
    - 110
    - 101
    - 114
    - 34
    - 44
    - 34
    - 112
    - 101
    - 110
    - 100
    - 105
    - 110
    - 103
    - 95
    - 111
    - 119
    - 110
    - 101
    - 114
    - 34
    - 58
    - 110
    - 117
    - 108
    - 108
    - 44
    - 34
    - 112
    - 101
    - 110
    - 100
    - 105
    - 110
    - 103
    - 95
    - 101
    - 120
    - 112
    - 105
    - 114
    - 121
    - 34
    - 58
    - 110
    - 117
    - 108
    - 108
    - 125

