framework/contracts/account/manager/tests/snapshots/adapters__install_one_adapter_with_fee-contract4.snap
---
source: contracts/account/manager/tests/adapters.rs
expression: chain.app.borrow().dump_wasm_raw(&contract_addr)
---
- - - 99
    - 111
    - 110
    - 102
    - 105
    - 103
  - - 123
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 95
    - 99
    - 111
    - 110
    - 116
    - 114
    - 111
    - 108
    - 34
    - 58
    - 123
    - 34
    - 97
    - 100
    - 100
    - 114
    - 101
    - 115
    - 115
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 49
    - 34
    - 125
    - 44
    - 34
    - 97
    - 110
    - 115
    - 95
    - 104
    - 111
    - 115
    - 116
    - 34
    - 58
    - 123
    - 34
    - 97
    - 100
    - 100
    - 114
    - 101
    - 115
    - 115
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 48
    - 34
    - 125
    - 125
- - - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 95
    - 105
    - 110
    - 102
    - 111
  - - 123
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 34
    - 58
    - 34
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 58
    - 105
    - 98
    - 99
    - 45
    - 99
    - 108
    - 105
    - 101
    - 110
    - 116
    - 34
    - 44
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 34
    - 58
    - 34
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
    - 34
    - 125
- - - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 95
    - 100
    - 97
    - 116
    - 97
  - - 123
    - 34
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 34
    - 58
    - 34
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 58
    - 105
    - 98
    - 99
    - 45
    - 99
    - 108
    - 105
    - 101
    - 110
    - 116
    - 34
    - 44
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 34
    - 58
    - 34
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
    - 34
    - 44
    - 34
    - 100
    - 101
    - 112
    - 101
    - 110
    - 100
    - 101
    - 110
    - 99
    - 105
    - 101
    - 115
    - 34
    - 58
    - 91
    - 93
    - 44
    - 34
    - 109
    - 101
    - 116
    - 97
    - 100
    - 97
    - 116
    - 97
    - 34
    - 58
    - 110
    - 117
    - 108
    - 108
    - 125
- - - 111
    - 119
    - 110
    - 101
    - 114
    - 115
    - 104
    - 105
    - 112
  - - 123
    - 34
    - 111
    - 119
    - 110
    - 101
    - 114
    - 34
    - 58
    - 34
    - 111
    - 119
    - 110
    - 101
    - 114
    - 34
    - 44
    - 34
    - 112
    - 101
    - 110
    - 100
    - 105
    - 110
    - 103
    - 95
    - 111
    - 119
    - 110
    - 101
    - 114
    - 34
    - 58
    - 110
    - 117
    - 108
    - 108
    - 44
    - 34
    - 112
    - 101
    - 110
    - 100
    - 105
    - 110
    - 103
    - 95
    - 101
    - 120
    - 112
    - 105
    - 114
    - 121
    - 34
    - 58
    - 110
    - 117
    - 108
    - 108
    - 125

